--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "preview": "vite preview --host",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "tsc --noEmit",
     "format": "prettier --write ."
   },
